Style : Input Overflowing fix

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
     border: 2px dashed black;
     border-radius: 5px;
     background-color: inherit;
+    width: 40vw;
 }
 
 .container input:focus {
